Improve Code